[package]
name = "bitcoin-script"
version = "0.2.0"
authors = ["Matt Bell <mappum@gmail.com>", "Lukas George lukas@zerosync.org"]
edition = "2021"
description = "Inline Bitcoin scripts"
license = "MIT"
repository = "https://github.com/BitVM/rust-bitcoin-script"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitcoin = "0.31.1"
bitcoin = { git = "https://github.com/cyl19970726/rust-bitcoin", rev = "ffad6f3" }
quote = "1.0.23"
proc-macro-error = "1.0.4"
lazy_static = "1.4.0"
hex = "0.4.3"
proc-macro2 = "1.0.51"

[patch.crates-io.base58ck]
git = "https://github.com/cyl19970726/rust-bitcoin"
branch = "merge"

[patch.crates-io.bitcoin]
git = "https://github.com/cyl19970726/rust-bitcoin"
branch = "merge"

[patch.crates-io.bitcoin_hashes]
git = "https://github.com/cyl19970726/rust-bitcoin"
branch = "merge"

[patch.crates-io.bitcoin-internals]
git = "https://github.com/cyl19970726/rust-bitcoin"
branch = "merge"

[patch.crates-io.bitcoin-io]
git = "https://github.com/cyl19970726/rust-bitcoin"
branch = "merge"

[patch.crates-io.bitcoin-units]
git = "https://github.com/cyl19970726/rust-bitcoin"
branch = "merge"
